microservices/recipes-api/00-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipes-api
  template:
    metadata:
      labels:
        app: recipes-api
    spec:
      containers:
        - name: recipes-api
          image: tastycook.azurecr.io/recipes-api:4c5bc52
          ports:
            - containerPort: 80
