microservices/recipes-api/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipes-api
  template:
    metadata:
      labels:
        app: recipes-api
    spec:
      containers:
        - name: recipes-api
          image: tastycook.azurecr.io/recipes-api:1685887638
          ports:
            - containerPort: 80
        - name: rabbitmq
          image: rabbitmq:management
          ports:
            - containerPort: 15672
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: recipes-api-pvc
