microservices/recipes-api/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipes-api
spec:
  selector:
    app: recipes-api
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
