microservices/recipes-api/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipes-api
  namespace: tastycook
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - back.tastycook.live
      secretName: tastycook-tls
  rules:
    - host: back.tastycook.live
      http:
        paths:
          - path: /recipes(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: recipes-api
                port:
                  number: 80
